--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">FirstProject</string>
-    <string name="nom">Introdueix el teu nom:</string>
+    <string name="nom">Introdueix el teu nom</string>
     <string name="ok">OK</string>
+    <string name="title">Wireframes PMDM</string>
 </resources>
